src/styles.css
 * {
  font-family: Arial, Helvetica, sans-serif;
}

html, body {
  margin: 0;
  border: 0;
  padding: 0;
  background-color: #fff;
}

main {
  margin: auto;
  padding: 20px;
}

main > h1 {
  text-align: center;
  font-size: 3.5em;
}

.center {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 50%;
}

footer{
  text-align: right;
  font-size: 0.75em;
} 

